MQTT listener logs errors and fails gracefully instead of throwing exceptions in case of connection lost